socialNetwork/helm-chart/socialnetwork/jaeger-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jaeger
  name: jaeger-node-port
spec:
  selector:
    service: jaeger
  ports:
    nodePort: 32131
    port: 16686
    protocol: TCP
    targetPort: 16686
  type: NodePort
